[tool.poetry]
name = "battlement"
version = "0.1.0"
description = "Defensive programming library for python"
authors = ["Matheus Xavier <mxavier@mail.cmdforge.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
